<resources>
    <string name="app_name">ASSIGNMENT1</string>
        <string name="divide">\uf529</string>
        <string name="multiply">\uf00d</string>
        <string name="plus">\u002b</string>
        <string name="minus">\uf068</string>
        <string name="percent">\u0025</string>
        <string name="plus_minus">\ue43c</string>
        <string name="backspace">\uf55a</string>
        <string name="equals">\u003d</string>
</resources>