<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/resultRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/result_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:fontFamily="@font/fa_solid_900"
            android:gravity="end"
            android:paddingTop="@dimen/padding_y"
            android:paddingBottom="@dimen/padding_y"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="@dimen/result_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sixthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/fifthRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultRow">

        <Button
            android:id="@+id/plusMinusButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x_row1and6"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="plus_minus"
            android:text="@string/plus_minus"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/backspaceButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x_row1and6"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="backspace"
            android:text="@string/backspace"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/fourthRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sixthRow">

        <Button
            android:id="@+id/sevenButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="7"
            android:text="7"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/eightButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="8"
            android:text="8"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/nineButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="9"
            android:text="9"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/divideButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="divide"
            android:text="@string/divide"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/thirdRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifthRow">

        <Button
            android:id="@+id/fourButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="4"
            android:text="4"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="5"
            android:text="5"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/sixButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="6"
            android:text="6"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/multiplyButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="multiply"
            android:text="@string/multiply"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/secondRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourthRow">

        <Button
            android:id="@+id/oneButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="1"
            android:text="1"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/twoButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="2"
            android:text="2"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/threeButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="3"
            android:text="3"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/plusButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="plus"
            android:text="@string/plus"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/firstRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdRow">

        <Button
            android:id="@+id/decimalButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="."
            android:text="."
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/number_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="0"
            android:text="0"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/percentButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="percent"
            android:text="@string/percent"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/minusButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="minus"
            android:text="@string/minus"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondRow">

        <Button
            android:id="@+id/clearButton"
            style="@style/operation_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x_row1and6"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="clear"
            android:text="C"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/equalsButton"
            style="@style/equals_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x_row1and6"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="equals"
            android:text="@string/equals"
            android:textSize="@dimen/button_text"
            app:cornerRadius="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
